--- a/deployment.yaml
+++ b/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         app: flaskdemo
     spec:
       containers:
-      - image: hbkw1772/test:49
+      - image: hbkw1772/goorm-project:49
         name: flaskdemo
         resources: {}
 status: {}
