--- a/deployment.yaml
+++ b/deployment.yaml
@@ -20,6 +20,14 @@ spec:
       containers:
       - image: hbkw1772/goorm-project:31
         name: flaskdemo
+         volumeMounts:
+        - name: flask-db
+          mountPath: /goorm-jenkins
+      volumes:
+      - name: flask-db
+        hostPath:
+          path: /home/hyeongbin/goorm-jenkins 
+          type: Directory
         resources: {}
 status: {}
 ---
