--- a/deployment.yaml
+++ b/deployment.yaml
@@ -28,7 +28,7 @@ spec:
       - name: flask-db
         hostPath:
           path: /home/hyeongbin/goorm-jenkins 
-          type: Directory
+          type: DirectoryOrCreate
 status: {}
 ---
 apiVersion: v1
