--- a/deployment.yaml
+++ b/deployment.yaml
@@ -20,7 +20,15 @@ spec:
       containers:
       - image: hbkw1772/goorm-project:46
         name: flaskdemo
+        volumeMounts:
+        - name: flask-db
+          mountPath: /goorm-jenkins
         resources: {}
+      volumes:
+      - name: flask-db
+        hostPath:
+          path: /home/hyeongbin/goorm-jenkins
+          type: DirectoryOrCreate        
 
 status: {}
 ---
