--- a/deployment.yaml
+++ b/deployment.yaml
@@ -21,7 +21,14 @@ spec:
       - image: hbkw1772/goorm-project:48
         name: flaskdemo
         resources: {}
-        
+        volumeMounts:
+        - name: aws-sc-ebs-pvc-nginx
+          mountPath: /data
+      volumes:
+      - name: aws-sc-ebs-pvc-nginx
+        persistentVolumeClaim:
+          claimName: aws-sc-ebs-pvc
+          
 status: {}
 ---
 apiVersion: v1
