--- a/deployment.yaml
+++ b/deployment.yaml
@@ -21,6 +21,13 @@ spec:
       - image: hbkw1772/goorm-project:54
         name: flaskdemo
         resources: {}
+        volumeMounts:
+        - name: aws-sc-ebs-pvc-db
+          mountPath: /web
+      volumes:
+      - name: aws-sc-ebs-pvc-db
+        persistentVolumeClaim:
+          claimName: aws-sc-ebs-pvc
           
 status: {}
 ---
